--- a/index.html
+++ b/index.html
@@ -159,5 +159,9 @@ logically:
         startclock();
     },1000)</pre>
     <script src="./index.js"></script> 
+      <br>
+    <hr>
+    <h2>Q.10</h2>
+    <a href="./index1.html">Click Here</a>
 </body>
 </html>
