--- a/index1.html
+++ b/index1.html
@@ -7,19 +7,18 @@
     <title>Project</title>
     <link rel="stylesheet" href="./style1.css">
 </head>
-<body class="parent">
+    <div id="parent">
     <button type="reset" class="btn"><a href="./index1.html">Play Again</a></button>
     <h1 class="head">(Between 1 To 100)</h1>
     <h1 class="head1">Guss My Number!</h1>
     <hr class="line">
     <div class="box1">?</div>
-    <input type="number" class="box2" id="input">
-    <h1 class="head2">...Start Guessing</h1><br>
-    <button class="btn1" id="btn" onclick="call()">Check!</button>
+    <input type="text" class="box2" id="input">
+    <div id="head2" class="head2">...Start Guessing</div><br>
+    <button class="btn1" id="btn" onclick="callme()">Check!</button>
     <h6 class="head3" > <img src="./one-hundred.png" alt="" class="img1">  Chances: <b>100</b></h6>
    
     <h6 class="head4"> <img src="./trophy.png" alt="" class="img2">  Highscore: <b>0</b></h6>
     <script src="./index1.js"></script>
-
-</body>
+</div>
 </html>
